<resources>
    <string name="iniciarSesionErrorIniciar">Error en usuario y/o constraseña</string>
    <string name="iniciarSesionErrorRegistrar">Error al registrar usuario, verifique datos por favor</string>
    <string name="iniciarSesionRegistrarCorrecto">¡Usuario registrado correctamente!</string>
    <string name="iniciarSesionCamposVacios">Faltan datos de entrada</string>
    <string name="iniciarSesionClaveError">Las claves no coinciden</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="verificarClave">Verifique su clave</string>
    <string name="Registrar">Registrar</string>
    <string name="correo">Correo</string>
    <string name="clave">Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="app_name">AppClass</string>
    <string name="noCompatible">No compatible</string>
    <string name="noBluetooth">Lamentablemente su dispositivo no dispone del módulo Bluetooth</string>
    <string name="salir">Salir</string>
    <string name="pinCode">Pin Code</string>
    <string name="ayudaLoginCorto">\?</string>
    <string name="ayudaLoginLargo">¿Ayuda con mi PIN? </string>
    <string name="ayudaLogin">\nPara obtener tu PinCode accede a \"www.appclass.com/reg/\" con el siguiente valor
    MAC_BT o 5555 para evaluación sin respaldo en la nube\n</string>
    <string name="nombreClase">Nombre de la clase</string>
    <string name="listadoClases">Listado de clases</string>
    <string name="cantidadAlumnos"># alumnos</string>
    <string name="agregarClase">Agregar Clase</string>
    <string name="borrarTodasClases">Borrar todas las clases</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="salirBackDoble">Oprima una vez más para salir</string>
    <string name="alumnoId">Id Control</string>
    <string name="alumnoNombre">Nombre</string>
    <string name="alumnoApaterno">Apellido Paterno</string>
    <string name="alumnoAmaterno">Apellido Materno</string>
    <string name="alumnoBT">MAC Bluetooth</string>
    <string name="alumnoCorreo">Correo electrónico</string>
    <string name="agregarAlumno">Agregar Alumno</string>
    <string name="alumnoRegistro">Alumno registrado</string>
    <string name="alumnoRegistroError">Error al insertar, favor de verificar los datos</string>
    <string name="alumnoRegistroExistente">Error al insertar, el registro ya existe</string>

    <string name="claseAsistenciaBuscarBT">Buscar BT</string>
    <string name="claseAsistenciaTerminar">Terminar</string>
    <string name="claseAsistenciaCrearLista">Crear lista</string>
    <string name="claseConfirmarBorrarMSG">Escriba \"#\" para borrar la clase</string>
    <string name="claseConfirmarLimpiarMSG">Escriba \"#\" para limpiar la clase</string>
    <string name="claseConfirmarCodigo">confirmar</string>
    <string name="claseDetalles">Detalles de la clase</string>
    <string name="claseListaConfirmarMSG">Escriba \"#\" para borrar la lista</string>
    <string name="configuracionTitulo">Configuración</string>
    <string name="configuracionTituloAsistencia">Asistencia</string>
    <string name="configuracionAsistenciaAlumnosSeparados">Separar alumnos con asistencia</string>
    <string name="configuracionAsistenciaModificarAsistenciaPasada">Permitir modificar asistencia(s) de otras fechas</string>
    <string name="configuracionTituloSeguridad" >Seguridad</string>
    <string name="configuracionSeguridadBorrar">No solicitar confirmacion para eliminar datos</string>
    <string name="configuracionTituloClases">Clases</string>
    <string name="configuracionClasesOrdenarNombre">Ordenar clases por nombre, en su defecto será por fecha de inclusión</string>
    <string name="menuConfigurar">Configurar AppClass</string>





    <string name="loginClave">Contraseña</string>
    <string name="loginCorreo">Correo electrónico</string>
    <string name="loginIniciarSesion">Iniciar sesión</string>
    <string name="loginOlvideClave">olvidé mi clave</string>
    <string name="loginIdControl">id Control</string>
    <string name="loginNombre">Nombre</string>
    <string name="loginApellidos">Apellidos</string>
    <string name="loginBluetoothSolicitar">¿Bluetooth MAC?</string>


    <string name="claseDetalleBorrarAlumno">Escriba \"#\" para borrar a: $</string>
    <string name="confirmarCodigo">confirmar</string>
    <string name="alumnoApellidos">Apellidos</string>
    <string name="alumnoCerrar">Cerrar</string>
    <string name="alumnoAsistencias">Asistencias</string>
    <string name="alumnoFaltas">Faltas</string>
    <string name="alumnoDetallesAsistencia">Detalle de asistencias</string>
</resources>
